<resources>
    <string name="app_name">Otaku Jikan</string>

    <string name="search_hint">Search in Animes</string>
    <string name="search">Search</string>

    <string name="schedule">Schedule</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="unfavorite">UnFavorite</string>

    <string name="share_via">Share Via</string>

    <string name="score">Score</string>
    <string name="synopsis">Synopsis</string>
    <string name="type">Type</string>
    <string name="episodes">Episodes</string>

    <string name="content_description">Poster of Anime</string>

    <string name="error_message">Error Message</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="extra_favorite_id">extraFavoriteId</string>
    <string name="instance_favorite_id">instanceFavoriteId</string>

    <string name="text_plain">text/plain</string>

    <string name="android_webkit">android.webkit.</string>

    <string name="update_service">UpdateService</string>
    <string name="from_activity_schedule_list">FROM_ACTIVITY_SCHEDULES_LIST</string>
    <string name="android_appwidget_action_appwidget_update">android.appwidget.action.APPWIDGET_UPDATE</string>

    <string name="base_url">https://api.jikan.moe/v3/</string>

</resources>
