<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:nextFocusDown="@+id/search_button"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGray"
                android:textSize="18sp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/monday_recycler_view"
                android:nextFocusUp="@id/search_edit_text"
                android:onClick="@string/search"
                android:text="search" />

            <TextView
                android:id="@+id/monday_text_view"
                style="@style/Days"
                android:text="@string/monday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/monday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/tuesday_recycler_view" />

            <TextView
                android:id="@+id/tuesday_text_view"
                style="@style/Days"
                android:text="@string/tuesday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tuesday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/wednesday_recycler_view" />

            <TextView
                android:id="@+id/wednesday_text_view"
                style="@style/Days"
                android:text="@string/wednesday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/wednesday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/thursday_recycler_view" />

            <TextView
                android:id="@+id/thursday_text_view"
                style="@style/Days"
                android:text="@string/thursday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/thursday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/friday_recycler_view" />

            <TextView
                android:id="@+id/friday_text_view"
                style="@style/Days"
                android:text="@string/friday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/friday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/saturday_recycler_view" />

            <TextView
                android:id="@+id/saturday_text_view"
                style="@style/Days"
                android:text="@string/saturday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/saturday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/sunday_recycler_view" />

            <TextView
                android:id="@+id/sunday_text_view"
                style="@style/Days"
                android:text="@string/sunday" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sunday_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/ad_view" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/main_layout"
            android:nextFocusUp="@id/main_layout"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    </RelativeLayout>

</ScrollView>