<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ScheduleDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:id="@+id/image_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:fitsSystemWindows="true"
                android:minHeight="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:visibility="visible" />

            <View
                android:id="@+id/gradient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/details_background_with_shadow" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:paddingBottom="2dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:paddingTop="18dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:visibility="visible" />

            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/saveButton"
                        style="@style/DetailsButton"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:nextFocusDown="@id/shareButton"
                        android:text="@string/favorite" />

                    <Button
                        android:id="@+id/shareButton"
                        style="@style/DetailsButton"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:nextFocusUp="@id/saveButton"
                        android:text="@string/share" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/score_layout"
                    style="@style/DetailsLinearLayout"
                    android:layout_below="@+id/buttons_layout">

                    <TextView
                        style="@style/DetailsStaticTextView"
                        android:text="@string/score" />

                    <TextView
                        android:id="@+id/score"
                        style="@style/DetailsTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/synopsis_layout"
                    style="@style/DetailsLinearLayout"
                    android:layout_below="@+id/score_layout">

                    <TextView
                        style="@style/DetailsStaticTextView"
                        android:text="@string/synopsis" />

                    <TextView
                        android:id="@+id/synopsis"
                        style="@style/DetailsTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/type_layout"
                    style="@style/DetailsLinearLayout"
                    android:layout_below="@+id/synopsis_layout">

                    <TextView
                        style="@style/DetailsStaticTextView"
                        android:text="@string/type" />

                    <TextView
                        android:id="@+id/type"
                        style="@style/DetailsTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/episodes_layout"
                    style="@style/DetailsLinearLayout"
                    android:layout_below="@+id/type_layout">

                    <TextView
                        style="@style/DetailsStaticTextView"
                        android:text="@string/episodes" />

                    <TextView
                        android:id="@+id/episodes"
                        style="@style/DetailsTextView" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>